Tentative ajout image logo et 1er texte

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
@@ -28,20 +28,24 @@
       </div>
         <header id="home">
           <h1>
-            /Dev/Lyon
+              <img src="img/logoDevLyon.png"/> 
           </h1>
         </header>
         <article id="apropos">
           <h2>Qui sommes-nous ?</h2>
-          <p>TODO</p>
+          <p>Petit groupe d'entraide ayant pour objectif de promouvoir notre vision de l'informatique. Une vision où la qualité du logiciel est mise en avant, où les informaticiens sont des créateurs de valeurs.</p>
         </article>
         <article id="members">
           <h2>Les membres</h2>
-          <p>TODO</p>
+            <p>Emilien Pecoul</p>
+            <img src="img/emi.JPG"/> 
+            <a href="https://twitter.com/Ouarzy">@ouarzy sur twitter</a>
+
         </article>
         <article id="contact">
           <h2>Nous contacter</h2>
-          <p>TODO</p>
+          <p>devlyon'at'gmail.com</p>
+          <p>N'hésitez pas également à nous contacter directement via Twitter ou Hopwork</p>
         </article>
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
         <script type="text/javascript" src="js/bootstrap.min.js"></script>
