Correction typo dans le titre

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>DevLyon - Communauté d'indépendant à Lyon</title>
-    <meta name="description" content="DevLyon - Communauté d'indépendant à Lyon">
+    <title>DevLyon - Communauté d'indépendants à Lyon</title>
+    <meta name="description" content="DevLyon - Communauté d'indépendants à Lyon">
     <meta name="viewport" content="width=device-width">
 
     <link rel="stylesheet" href="css/bootstrap.min.css">
