Ajout blog et mail Alfred

--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
                     <a class="linkedin" href="http://fr.linkedin.com/in/alfredalmendra/fr"><span>Linkedin</span></a>
                     <a class="viadeo" href="http://fr.viadeo.com/fr/profile/alfred.almendra"><span>Viadeo</span></a>
                 </div>
+                <div><a href="http://atelierlogiciel.wordpress.com/">atelierlogiciel.wordpress.com</a></div>
+                <div><span>alfred.almendra [at] gmail.com</span></div>
             </li>
             <li>
                 <div><img alt="Emilien Pecoul" src="img/emilien_pecoul.jpg" /></div>
